--- a/home.html
+++ b/home.html
@@ -1,22 +1,16 @@
-<head>
+<!DOCTYPE html>
+  <html lang="en">
+
+  <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Jim Papke - Home</title>
-  <link href="styles.css" rel="stylesheet" <html lang="en">
+  <link href="styles.css" rel="stylesheet"> 
+
 </head>
 
 
 
 <body>
-
-  <!-- <div id="menubar">
-    <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="other.html">Other</a></li>
-      <li style="float:right"><a class="active" href="contact.html">Contact</a></li>
-    </ul>
-  </div>-->
 
   <header>
     <nav class="navbar">
@@ -24,7 +18,6 @@
       <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="resume.html">Resume</a></li>
-
         <li class="dropdown" style="height: 50px;">
           <button class="dropbtn">
             <a href="other.html">Other</a>
@@ -36,6 +29,7 @@
             <li><a href="books.html">Books</a></li>
           </ul>
         </li>
+        <li class="contact"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -57,6 +51,5 @@
 
   </div>
 </body>
-
 
 </html>
