Yachten angefangen und Bildstruktur organisiert

--- a/other.html
+++ b/other.html
@@ -8,21 +8,36 @@
     <link href="styles.css" rel="stylesheet" </head>
 
 <body>
-    <div id="menubar">
-        <ul>
+    <header>
+        <nav class="navbar">
+    
+          <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="other.html">Other</a></li>
-            <li style="float:right"><a class="active" href="contact.html">Contact</a></li>
-        </ul>
-    </div>
-
+            <li class="dropdown" style="height: 50px;">
+              <button class="dropbtn">
+                <a href="other.html">Other</a>
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <ul class="dropdown-content">
+                <li><a href="yachts.html">Yachts</a></li>
+                <li><a href="technik.html">Tech</a></li>
+                <li><a href="books.html">Books</a></li>
+              </ul>
+            </li>
+            <li class="contact"><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+    
 
     <div id="seite">
 
         <div id="titel">
             <h1>Other</h1>
         </div>
-
+          <div id="bild_pinguin">
+            <img src="/Bilder/IMG_0584.jpeg">
+          </div>  
     </div>
 </body>
