pdf Dateien eingebettet und Kleinigkeiten gemacht

--- a/other.html
+++ b/other.html
@@ -37,7 +37,7 @@
             <h1>Other</h1>
         </div>
           <div id="bild_pinguin">
-            <img src="/Bilder/IMG_0584.jpeg">
+            <img src="/pictures/IMG_0584.jpeg">
           </div>  
     </div>
 </body>
