--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,7 @@
         <div id="inhalt">
     
        <div id="bild_jim">
-         <img src="/Bilder/IMG_9203.jpeg">
+         <img src="/pictures/IMG_9203.jpeg">
          </div>
 
     
