yachts bearbeitet und kleine Details angepasst

--- a/yachts.html
+++ b/yachts.html
@@ -38,16 +38,16 @@
 <div id="inhalt">
   <h1>Yacht concepts:</h1>
  
-  <p>Project One</p>
+  <a href="yachts/yacht_one.html"><p>Project One</p></a>
+  <div id="photos">
+    <a href="yachts/yacht_one.html"><img src="yachts/yacht1.jpg"></a>
 
+
+  </div>
+
+<a href="yachts/project706.html"><p>Project 706</p></a>
 <div id="photos">
-  <img src="yachts/yacht1.jpg">
-</div>
-
-
-<p>Project Two</p>
-
-</a>
+  <a href="yachts/Project706.html"><img src="yachts/Project706.jpeg"></a>
 </div>
 
 </html>
