--- a/home.html
+++ b/home.html
@@ -6,20 +6,15 @@
   <title> Jim Papke - Home</title>
   <link href="styles.css" rel="stylesheet">
 </head>
-<header>
+
+<body>
+  <header>
   <nav class="navbar">
 
     <ul>
       <li><a href="home.html">Home</a></li>
       <li><a href="resume.html">Resume</a></li>
-      <li><a href="yachts.html">Yachts</a></li>
-      <li><a href="tech.html">Tech</a></li>
-      <li><a href="books.html">Books</a></li>
-      <li class="dropdown" style="height: 50px;">
-        <button class="dropbtn">
-          <a href="other.html">Other</a>
-          <i class="fa fa-caret-down"></i>
-        </button>
+      <li class="dropdown"><a href="other.html">Other</a>
         <ul class="dropdown-content">
           <li><a href="yachts.html">Yachts</a></li>
           <li><a href="tech.html">Tech</a></li>
@@ -32,7 +27,6 @@
   </nav>
 </header>
 
-<body>
   <div id="seite">
     <div id="titel">
       <h1>Jim Papke - Homepage</h1>
