favicon, test-page, contact form added

--- a/contact.html
+++ b/contact.html
@@ -2,58 +2,87 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Jim Papke - Contact</title>
-    <link href="styles.css" rel="stylesheet"> </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Jim Papke - Contact</title>
+  <link href="styles.css" rel="stylesheet">
+</head>
 
 <body>
-    <header>
-        <nav class="navbar">
-    
-          <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li class="dropdown" style="height: 50px;">
-              <button class="dropbtn">
-                <a href="other.html">Other</a>
-                <i class="fa fa-caret-down"></i>
-              </button>
-              <ul class="dropdown-content">
-                <li><a href="yachts.html">Yachts</a></li>
-                <li><a href="technik.html">Tech</a></li>
-                <li><a href="books.html">Books</a></li>
-              </ul>
-            </li>
-            <li class="contact"><a href="contact.html">Contact</a></li>
+  <header>
+    <nav class="navbar">
+
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li class="dropdown" style="height: 50px;">
+          <button class="dropbtn">
+            <a href="other.html">Other</a>
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <ul class="dropdown-content">
+            <li><a href="yachts.html">Yachts</a></li>
+            <li><a href="technik.html">Tech</a></li>
+            <li><a href="books.html">Books</a></li>
           </ul>
-        </nav>
-      </header>
-    
-
-    <div id="seite">
-
-        <div id="inhalt">
-            <div id="titel">
-                <h1>Contact me:</h1>
-            </div>
+        </li>
+        <li class="contact"><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
 
+  <div id="seite">
+  
+    <div id="inhalt">
+      <div id="titel">
+        <h1>Contact me:</h1>
+      </div>
+      <form>
+        <ul>
+          <li><label>Vorname:
+              <input name="vorname" autocomplete="vorname">
+            </label></li>
+  
+          <li><label>Nachname:
+              <input name="nachname" autocomplete="nachname">
+            </label></li>
+  
+          <li><label>Nachricht:
+              <textarea rows=4></textarea>
+            </label></li>
+        </ul>
+      </form>
 
 
-            <h2>Social media:</h2>
+      <h2>Social media:</h2>
+
+            <form>
+        <ul>
+          <li><label>Vorname:
+              <input name="vorname" autocomplete="vorname">
+            </label></li>
+  
+          <li><label>Nachname:
+              <input name="nachname" autocomplete="nachname">
+            </label></li>
+  
+          <li><label>Nachricht:
+              <textarea rows=4></textarea>
+            </label></li>
+        </ul>
+      </form>
 
 
+      <h2>Address:</h2>
 
-            <h2>Address:</h2>
-
-            <div id="contactaddresstext">
+      <div id="contactaddresstext">
 
 
-            </div>
-
-        </div>
+      </div>
 
     </div>
+
+  </div>
 
 </body>
