--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title> Jim Papke - Home</title>
   <link href="styles.css" rel="stylesheet">
+  <link href="pictures/favicon.ico" rel="icon">
 </head>
 
 <body>
@@ -19,8 +20,10 @@
           <li><a href="yachts.html">Yachts</a></li>
           <li><a href="tech.html">Tech</a></li>
           <li><a href="books.html">Books</a></li>
-        </ul>
-      </li>
+        </ul> 
+        </li>
+      <li><a href="test.html">Test</a></li>
+   
 
       <li class="contact"><a href="contact.html">Contact</a></li>
     </ul>
@@ -35,6 +38,7 @@
     <div id="inhalt">
 
       <p>Right here on my page you can expect several things like:</p>
+
       <div id="aboutme">
         <li>Test</li>
         <li>Hallo Pati</li>
@@ -44,7 +48,8 @@
 
   <footer>
     <div class="footer">
-      <a href="contact.html">Test</a>
+      <a href="contact.html">Kontakt</a>
+
     </div>
   </footer>
 </body>
