--- a/yachts.html
+++ b/yachts.html
@@ -8,49 +8,41 @@
   <link href="yachts/yachts.css" rel="stylesheet">
 </head>
 
+<body>
+  <header>
+    <nav class="navbar">
 
-<header>
-  <nav class="navbar">
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li class="dropdown"><a href="other.html">Other</a>
+          <ul class="dropdown-content">
+            <li><a href="yachts.html">Yachts</a></li>
+            <li><a href="tech.html">Tech</a></li>
+            <li><a href="books.html">Books</a></li>
+          </ul>
+        </li>
 
-    <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li class="dropdown" style="height: 50px;">
-        <button class="dropbtn">
-          <a href="other.html">Other</a>
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <ul class="dropdown-content">
-          <li><a href="yachts.html">Yachts</a></li>
-          <li><a href="technik.html">Tech</a></li>
-          <li><a href="books.html">Books</a></li>
-        </ul>
-      </li>
-      <li class="contact"><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
+        <li class="contact"><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <div id="inhalt">
+    <h1>Yacht concepts</h1>
+    <a href="yachts/yacht_one.html">
+      <p>Project One</p>
+    </a>
+    <div id="photos">
+      <a href="yachts/yacht_one.html"><img src="yachts/yacht1.jpg"></a>
+    </div>
+    <a href="yachts/project706.html">
+      <p>Project 706</p>
+    </a>
+    <div id="photos">
+      <a href="yachts/Project706.html"><img src="yachts/Project706.jpeg"></a>
+    </div>
 
-
-
-
-<div id="inhalt">
-  <h1>Yacht concepts:</h1>
- 
-  <a href="yachts/yacht_one.html"><p>Project One</p></a>
-  <div id="photos">
-    <a href="yachts/yacht_one.html"><img src="yachts/yacht1.jpg"></a>
-
-
-  </div>
-
-<a href="yachts/project706.html"><p>Project 706</p></a>
-<div id="photos">
-  <a href="yachts/Project706.html"><img src="yachts/Project706.jpeg"></a>
-</div>
+</body>
 
 </html>
-
-
-
