new colors, updated footer,

--- a/home.html
+++ b/home.html
@@ -11,7 +11,6 @@
 <body>
   <header>
   <nav class="navbar">
-
     <ul>
       <li><a href="home.html">Home</a></li>
       <li><a href="resume.html">Resume</a></li>
@@ -35,21 +34,30 @@
       <h1>Jim Papke - Homepage</h1>
       <h2>What can you expect?</h2>
     </div>
-    <div id="inhalt">
-
+    <div id="home_inhalt">
       <p>Right here on my page you can expect several things like:</p>
-
       <div id="aboutme">
-        <li>Test</li>
-        <li>Hallo Pati</li>
+        <ul>
+          <li>My Resume</li>
+          <li>Photos</li>
+          <li>Yachts</li>
+        </ul>
       </div>
     </div>
   </div>
 
   <footer>
     <div class="footer">
-      <a href="contact.html">Kontakt</a>
-
+      <div id="footer_contact">
+      <a href="contact.html">Contact</a>
+      </div>
+      <!-- <div id="footer_picture_left">
+        <img src="pictures/IMG_0584.jpeg">
+      </div> -->
+      <div id="footer_span">
+        <span>Test1</span>
+        <span>Test2</span>
+        <span>Test3</span>
     </div>
   </footer>
 </body>
