added contact form, color change, details

--- a/contact.html
+++ b/contact.html
@@ -40,49 +40,25 @@
       </div>
       <form>
         <ul>
-          <li><label>Vorname:
-              <input name="vorname" autocomplete="vorname">
-            </label></li>
+           <li>
+              <label for="firstname">First Name:</label>
+              <input type="text" id="firstname" name="firstname" placeholder="Please enter your first name here">
+           </li>
   
-          <li><label>Nachname:
-              <input name="nachname" autocomplete="nachname">
-            </label></li>
-  
-          <li><label>Nachricht:
-              <textarea rows=4></textarea>
+            <li>
+              <label for="fname">Last Name:</label>
+              <input type="text" id="lastname" name="firstname" placeholder="Please enter your last name here">
+            </li>
+
+          <li><label for="message">Your message:
+              <textarea rows=6 placeholder="Please enter your message here"></textarea>
             </label></li>
         </ul>
       </form>
-
-
       <h2>Social media:</h2>
-
-            <form>
-        <ul>
-          <li><label>Vorname:
-              <input name="vorname" autocomplete="vorname">
-            </label></li>
-  
-          <li><label>Nachname:
-              <input name="nachname" autocomplete="nachname">
-            </label></li>
-  
-          <li><label>Nachricht:
-              <textarea rows=4></textarea>
-            </label></li>
-        </ul>
-      </form>
-
-
       <h2>Address:</h2>
-
       <div id="contactaddresstext">
-
-
       </div>
-
     </div>
-
   </div>
-
 </body>
