--- a/home.html
+++ b/home.html
@@ -10,32 +10,30 @@
 
 <body>
   <header>
-  <nav class="navbar">
-    <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li class="dropdown"><a href="other.html">Other</a>
-        <ul class="dropdown-content">
-          <li><a href="yachts.html">Yachts</a></li>
-          <li><a href="tech.html">Tech</a></li>
-          <li><a href="books.html">Books</a></li>
-        </ul> 
+    <nav class="navbar">
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li class="dropdown"><a href="other.html">Other</a>
+          <ul class="dropdown-content">
+            <li><a href="yachts.html">Yachts</a></li>
+            <li><a href="tech.html">Tech</a></li>
+            <li><a href="books.html">Books</a></li>
+          </ul>
         </li>
-      <li><a href="test.html">Test</a></li>
-   
+        <li><a href="test.html">Test</a></li>
 
-      <li class="contact"><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header>
+
+        <li class="contact"><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <div id="seite">
     <div id="titel">
       <h1>Jim Papke - Homepage</h1>
-      <h2>What can you expect?</h2>
     </div>
     <div id="home_inhalt">
-      <p>Right here on my page you can expect several things like:</p>
       <div id="aboutme">
         <ul>
           <li>My Resume</li>
@@ -43,21 +41,27 @@
           <li>Yachts</li>
         </ul>
       </div>
+      <div id="photos_home">
+        <img src="/pictures/88B8F3D7-DBAD-46A0-9173-E9CAE4885D5E_1_105_c.jpeg">
+      </div>
     </div>
+  </div>
+  </div>
   </div>
 
   <footer>
     <div class="footer">
       <div id="footer_contact">
-      <a href="contact.html">Contact</a>
+        <a href="contact.html">Contact</a>
       </div>
       <!-- <div id="footer_picture_left">
         <img src="pictures/IMG_0584.jpeg">
       </div> -->
       <div id="footer_span">
-        <span>Test1</span>
-        <span>Test2</span>
-        <span>Test3</span>
+        <span>Back to the top</span>
+        <span>galery</span>
+        <span>Coming soon</span>
+      </div>
     </div>
   </footer>
 </body>
