fixed navbar position, contact form

--- a/books.html
+++ b/books.html
@@ -33,7 +33,7 @@
 
     <div id="seite">
     
-      <div id="inhalt">
+      <div id="seite">
     
         <p>Zieht euch warm an, es wird heiss! - Sven Plöger</p>
         <p><a href="files/Buch_SvenPlöger.pdf" target="_blank">pdf Datei anschauen</a> </p>
