--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
   <div id="seite">
   
-    <div id="inhalt">
+    <div id="seite">
       <div id="titel">
         <h1>Contact me:</h1>
       </div>
@@ -46,13 +46,14 @@
            </li>
   
             <li>
-              <label for="fname">Last Name:</label>
+              <label for="lastname">Last Name:</label>
               <input type="text" id="lastname" name="firstname" placeholder="Please enter your last name here">
             </li>
 
+
           <li><label for="message">Your message:
-              <textarea rows=6 placeholder="Please enter your message here"></textarea>
-            </label></li>
+            <textarea rows=4 type="text" placeholder="Please enter your message here"></textarea>
+          </label></li>
         </ul>
       </form>
       <h2>Social media:</h2>
