--- a/home.html
+++ b/home.html
@@ -22,8 +22,6 @@
           </ul>
         </li>
         <li><a href="test.html">Test</a></li>
-
-
         <li class="contact"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -33,7 +31,7 @@
     <div id="titel">
       <h1>Jim Papke - Homepage</h1>
     </div>
-    <div id="home_inhalt">
+    <div id="home_seite">
       <div id="aboutme">
         <ul>
           <li>My Resume</li>
@@ -44,6 +42,7 @@
       <div id="photos_home">
         <img src="/pictures/88B8F3D7-DBAD-46A0-9173-E9CAE4885D5E_1_105_c.jpeg">
       </div>
+      <img src="pictures/A8DEA400-C787-4FEC-82A8-C86FFC3DFD5F_1_105_c.jpeg">
     </div>
   </div>
   </div>
