--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
           <p class="kontakt-text">Kapellenweg 19</p>
           <p class="kontakt-text">71120 Grafenau</p>
          </div>
-        <div id="inhalt">
+        <div id="seite">
     
        <div id="bild_jim">
          <img src="/pictures/IMG_9203.jpeg">
