--- a/yachts.html
+++ b/yachts.html
@@ -28,7 +28,7 @@
     </nav>
   </header>
 
-  <div id="inhalt">
+  <div id="seite">
     <h1>Yacht concepts</h1>
     <a href="yachts/yacht_one.html">
       <p>Project One</p>
